# xml-marshal

./: LICENSE  README.md  xml-marshal.cabal
src/Text/XML/: Marshal.hs
