name:                xml-marshal
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.12.0 && <4.13
                     , xml-conduit >=1.8.0 && <1.9
                     , text >=1.2.3 && <1.3
                     , time >=1.8.0 && <1.9
  exposed-modules:     Text.XML.Marshal
