name:                xml-marshal
version:             0.0.1.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.12.0 && <4.15
                     , containers >=0.6.0 && <0.7
                     , xml-conduit >=1.8.0.1 && <1.9.2
                     , text >=1.2.3 && <1.3
                     , time >=1.8.0 && <1.10
  exposed-modules:     Text.XML.Marshal
